Edit some Swagger
